<resources>
    <string name="app_name">SplitYourBill</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="person_involved">Person Involved</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="payee">Payee</string>
    <string name="enter_description">Enter Description</string>
    <string name="start_transaction">Start Transaction</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_person">Add Person</string>
    <string name="split_your_bill">Split Your Bill</string>
    <string name="create_group">Create New Group</string>
    <string name="settle_up">Settle Up</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="view_transactions">View Transactions</string>
    <string name="transactions">Transactions</string>
    <string name="easy_split">Easy Split</string>

    <string name="intro">Easy Split is a user friendly and intuitive app designed to streamline the process of splitting bills effortlessly. Our app provides a convenient platform for organizing, tracking, and sharing expenses, ensuring fairness and transparency in every transaction</string>
    <string name="nameOfApp">Easy Split</string>
    <string name="just_a_icon">Just a Icon</string>
    <string name="simplifying_shared">Simplifying Shared</string>
    <string name="expenses_with_ease">Expenses With Ease!</string>
    <string name="view_transaction">View Transaction</string>
    <string name="group_name">Group Name</string>
    <string name="no_person_found">No Person Found!!</string>
    <string name="dollar">$</string>
    <string name="new_group">New Group</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="create_group_1">Create Group</string>
    <string name="test_string">Arya Paid Food \nPritam | Arya | Rimi | Anti | Pritam | Arya | Rimi | Anti</string>
    <string name="test_bal">Rs 200000</string>
    <string name="test_string_2">Arya Gets</string>


</resources>