<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".addTransDetails">

    <ImageButton
        android:id="@+id/goToBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="0"
        android:background="@color/transparent"
        android:contentDescription="@string/just_a_icon"
        android:padding="10dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textViewTopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins"
        android:text="@string/easy_split"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToBackButton" />

    <TextView
        android:id="@+id/textViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/add_transaction"
        android:textColor="@color/white"
        android:textSize="25sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTopName" />

    <TextView
        android:id="@+id/viewGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/group_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTop" />


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewGroupName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"

                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingStart="10dp"
                    android:text="@string/payee"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights,RtlSymmetry" />


                <Spinner
                    android:id="@+id/payeeInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:minHeight="50dp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingStart="10dp"
                    android:text="@string/amount"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights,RtlSymmetry" />

                <EditText
                    android:id="@+id/addPayeeAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:autofillHints=""
                    android:background="@color/transparent"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/dollar"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textSize="20sp" />


            </LinearLayout>


            <EditText
                android:id="@+id/addPayeeDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@color/transparent"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/enter_description"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewInvolved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/person_involved"
                android:padding="5dp"
                android:textSize="20sp"
                app:drawableRightCompat="@android:drawable/arrow_down_float" />

            <Button
                android:id="@+id/addTransToDB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:text="@string/add_transaction"
                android:textSize="20sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/goToHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        android:background="@color/transparent"
        android:drawableTop="@drawable/home"
        android:fontFamily="@font/poppins_medium"
        android:padding="5dp"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/showTransButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/showTransButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:drawableTop="@drawable/paid"
        android:fontFamily="@font/poppins_medium"
        android:padding="5dp"
        android:text="@string/view_transaction"
        android:textColor="@color/black"
        android:textSize="10sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/goToSettleUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/goToHomeButton"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/goToSettleUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:drawableTop="@drawable/estimate"
        android:fontFamily="@font/poppins_medium"
        android:padding="5dp"

        android:text="@string/settle_up"

        android:textColor="@color/black"
        android:textSize="10sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/showTransButton"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>