<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ViewTransaction">


    <ImageButton
        android:id="@+id/goToBackButton"
        android:padding="20dp"
        android:src="@drawable/back"
        android:layout_width="40dp"
        android:background="@color/transparent"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_height="40dp"
        android:contentDescription="@string/todo"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewTopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_gravity="left"
        android:layout_marginStart="50dp"
        android:text="@string/easy_split"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />



    <TextView
        android:id="@+id/textViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:text="@string/transactions"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />


    <com.google.android.material.card.MaterialCardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_inner"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="30dp"
        card_view:cardElevation="0dp" >

        <ListView
            android:id="@+id/lv1"
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:layout_marginBottom="50dp"
            android:dividerHeight="1dp"
            android:layout_gravity="center_horizontal"
            android:horizontalSpacing="3dp"
            android:scrollingCache="true"


            android:smoothScrollbar="true"
            android:stretchMode="columnWidth"
            android:verticalSpacing="3dp"

            />


    </com.google.android.material.card.MaterialCardView>





        <Button
            android:id="@+id/goToHomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:text="@string/home"
            android:textSize="20sp"
            android:textStyle="bold" />






</LinearLayout>