<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".createGroupAddName">

    <TextView
        android:id="@+id/addGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="Enter Group Name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addGroupNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="Enter Group Name"
        android:inputType="textCapWords"
        android:textSize="25sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/addGroupNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:text="Create Group"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/add_person"
        android:visibility="gone"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/enter_name"
        android:visibility="gone"
        android:inputType="textCapWords"
        android:textSize="25sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/addNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:visibility="gone"
        android:text="@string/add_person"
        android:textSize="20sp"
        android:textStyle="bold" />


    <ListView
        android:id="@+id/listViewAddLayout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginBottom="50dp"
        android:dividerHeight="1dp"
        android:horizontalSpacing="3dp"
        android:scrollingCache="true"
        android:smoothScrollbar="true"
        android:stretchMode="columnWidth"
        android:verticalSpacing="3dp"
        android:visibility="gone" />
        />

    <Button
        android:id="@+id/startTrans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:visibility="gone"
        android:text="@string/start_transaction"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>