<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/linearlayout"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="5dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/i1"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:src="@drawable/front"
            />



        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameOfApp"
            android:layout_gravity="center_horizontal"
            android:textColor="#9340E6"
            android:textStyle="bold"
            android:padding="5dp"
            android:textSize="30dp"

            />
        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Simplifying Shared"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="5dp"
            android:textSize="30dp"

            />
        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:text="Expenses With Ease!"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"

            />

        <TextView
            android:id="@+id/t4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:layout_marginBottom="60dp"
            android:text="@string/intro"/>
    </LinearLayout>


    <Button
        android:id="@+id/createGroupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:text="@string/create_group"
        android:textSize="20sp"
        android:textStyle="bold" />







    <TextView
        android:id="@+id/textViewTopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:text="@string/easy_split"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="20sp"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/textViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="Split Your Bill"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginBottom="50dp"
        android:dividerHeight="1dp"
        android:horizontalSpacing="3dp"
        android:scrollingCache="true"
        android:smoothScrollbar="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:stretchMode="columnWidth"
        android:verticalSpacing="3dp"
        android:visibility="gone"
        />





    <Button
        android:id="@+id/splitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:text="@string/settle_up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="bottom">

        <Button
            android:id="@+id/showTransButton"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@drawable/paid"
            android:padding="5dp"
            android:layout_gravity="bottom"
            android:text="View Transaction"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addTransButton"
            android:drawableTop="@drawable/plus1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:padding="5dp"
            android:layout_gravity="bottom"
            android:text="Add Transaction"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resetButton"
            android:drawableTop="@drawable/reset"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:padding="5dp"
            android:visibility="gone"
            android:layout_gravity="bottom"
            android:text="Reset"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold"

            />

    </LinearLayout>


</LinearLayout>